WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117029
Fix double hash lookup in RenderView::repaintSelection() loop.
https://bugs.webkit.org/show_bug.cgi?id=117029
Summary
Fix double hash lookup in RenderView::repaintSelection() loop.
Andreas Kling
Reported
2013-05-30 07:59:15 PDT
Fix double hash lookup in RenderView::repaintSelection() loop.
Attachments
Patch
(1.30 KB, patch)
2013-05-30 08:00 PDT
,
Andreas Kling
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2013-05-30 08:00:04 PDT
Created
attachment 203356
[details]
Patch
Andreas Kling
Comment 2
2013-05-30 10:03:58 PDT
Committed
r150966
: <
http://trac.webkit.org/changeset/150966
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug