Fix double hash lookup in RenderView::repaintSelection() loop. <http://webkit.org/b/117029>

Reviewed by Anders Carlsson.

* rendering/RenderView.cpp:
(WebCore::RenderView::repaintSelection):

Canonical link: https://commits.webkit.org/135298@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150966 268f45cc-cd09-0410-ab3c-d52691b4dbfc